--- a/data/blog/m1sterc001guy-receives-lts-grant.mdx
+++ b/data/blog/m1sterc001guy-receives-lts-grant.mdx
@@ -3,7 +3,49 @@ title: "Long-Term Support For m1sterc001guy "
 date: '2024-11-11'
 tags: ['OpenSats', 'grants', 'bitcoin', 'LTS', 'wave']
 draft: false
-authors: ['arvin', 'btcschelling', 'ecurrencyhodler']
+authors: ['arvin', 'btcschellingpt', 'ecurrencyhodler']
 images: ['/static/images/blog/TODO.jpg']
 summary: "OpenSats welcomes m1sterc001guy as an LTS Grantee."
 ---
+
+OpenSats is pleased to announce long-term support for
+[m1sterc001guy](https://github.com/m1sterc001guy/) for his continued
+contributions to the Bitcoin ecosystem.
+
+m1sterc001guy is the primary maintainer of the [Fedimint Lightning
+Gateway](https://fedibtc.github.io/fedi-docs/docs/gateways/intro/), playing an
+instrumental role in linking federated communities to the wider Bitcoin
+Lightning network, enabling seamless payment experiences.
+
+As an [independent
+contributor](https://github.com/fedimint/fedimint/commits?author=m1sterc001guy&before=90a2fb72e8b52660911aea69919a8bdc1fa20ebc+70),
+he has made substantial enhancements that have strengthened Fedimint's
+functionality. His key improvements in database transactions, support for LND
+and LDK, and advancements in resilience, crash recovery, and backup systems have
+fortified Fedimint's security and accessibility for Bitcoin custody.
+
+With this grant, m1sterc001guy will focus on:
+
+- Enhancing gateway features by integrating BOLT12 support, transaction logging,
+  profit tracking, and LSP specifications.
+- Developing new modules by building federated co-signing solutions using FROST,
+  expanding flexible custody options.
+- Improving usability by developing new debugging tools, refining the UI, and
+  optimizing federation management.
+
+These upgrades will make Fedimint a more versatile tool for many Bitcoin use
+cases by providing secure and private custody solutions, especially for
+community-focused applications.
+
+OpenSats strives to provide sustainable funding for the builders and maintainers
+of critical open-source infrastructure within the Bitcoin and nostr ecosystem.
+
+The OpenSats [Long-Term Support
+program](/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors)
+is made possible by the generosity of our donors. To continue supporting
+contributors like m1sterc001guy, please consider donating to the [General
+Fund](/funds/general).
+
+<center>
+    <DonateToGeneralFundButton/>
+</center>
