Remove `wave` tag

--- a/data/blog/m1sterc001guy-receives-lts-grant.mdx
+++ b/data/blog/m1sterc001guy-receives-lts-grant.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Long-Term Support For m1sterc001guy "
 date: '2024-11-11'
-tags: ['OpenSats', 'grants', 'bitcoin', 'LTS', 'wave']
+tags: ['OpenSats', 'grants', 'bitcoin', 'LTS']
 draft: false
 authors: ['arvin', 'btcschellingpt', 'ecurrencyhodler']
 images: ['/static/images/blog/62-m1sterc001guy-lts.jpg']
