Edit "linking" -> "connecting"

--- a/data/blog/m1sterc001guy-receives-lts-grant.mdx
+++ b/data/blog/m1sterc001guy-receives-lts-grant.mdx
@@ -14,7 +14,7 @@ contributions to the Bitcoin ecosystem.
 
 m1sterc001guy is the primary maintainer of the [Fedimint Lightning
 Gateway](https://fedibtc.github.io/fedi-docs/docs/gateways/intro/), playing an
-instrumental role in linking federated communities to the wider Bitcoin
+instrumental role in connecting federated communities to the wider Bitcoin
 Lightning network, enabling seamless payment experiences.
 
 As an [independent
