Add quote from grantee

--- a/data/blog/m1sterc001guy-receives-lts-grant.mdx
+++ b/data/blog/m1sterc001guy-receives-lts-grant.mdx
@@ -35,6 +35,14 @@ With this grant, m1sterc001guy will focus on:
 - Improving usability by developing new debugging tools, refining the UI, and
   optimizing federation management.
 
+>My goal is improve Fedimint's Lightning user experience and to bridge the
+>functionality between federated ecash and the Lightning network. I want
+>Lightning Gateways to be an easy tool for node operators to use, to expand the
+>utility of their Lightning node, and to provide Lightning payments for their
+>community.
+>
+><cite>—m1sterc001guy</cite>
+
 These upgrades will make Fedimint a more versatile tool for many Bitcoin use
 cases by providing secure and private custody solutions, especially for
 community-focused applications.
