Add content re: open-source ability

--- a/data/blog/3rd-wave-of-education-grants.mdx
+++ b/data/blog/3rd-wave-of-education-grants.mdx
@@ -23,6 +23,9 @@ support enables us to fund impactful educational initiatives. We are grateful
 for their commitment to fostering a more informed, inclusive, and decentralized
 future for Bitcoin.
 
+All educational content produced under these grants will be published under
+open-source licenses, ensuring it remains accessible to everyone.
+
 Here are the four projects receiving grants in this wave:
 
 - [BTC Map](#btc-map)  
@@ -118,7 +121,7 @@ License: CC BY-SA 4.0
 
 ---
 
-We invite educators, developers, and advocates to apply for grants under the
+We invite open-source educators, developers, and advocates to apply for grants under the
 OpenSats Education Initiative. Together, we can create a more informed and
 empowered society. For more information and to apply, please visit
 [opensats.org/apply](/apply).
