--- a/data/blog/m1sterc001guy-receives-lts-grant.mdx
+++ b/data/blog/m1sterc001guy-receives-lts-grant.mdx
@@ -22,7 +22,7 @@ contributor](https://github.com/fedimint/fedimint/commits?author=m1sterc001guy&b
 he has made substantial enhancements that have strengthened Fedimint's
 functionality. His key improvements in database transactions, support for LND
 and LDK, and advancements in resilience, crash recovery, and backup systems have
-fortified Fedimint's security and accessibility for Bitcoin custody. He has also
+fortified Fedimint's security and accessibility for bitcoin custody. He has also
 built [ROASTr](https://github.com/m1sterc001guy/roastr#), an independent
 Fedimint module that allows federations to collaboratively sign nostr notes.
 
