--- a/data/blog/3rd-wave-of-education-grants.mdx
+++ b/data/blog/3rd-wave-of-education-grants.mdx
@@ -23,8 +23,8 @@ support enables us to fund impactful educational initiatives. We are grateful
 for their commitment to fostering a more informed, inclusive, and decentralized
 future for Bitcoin.
 
-All educational content produced under these grants will be published under
-open-source licenses, ensuring it remains accessible to everyone.
+Educational content produced under these grants is to be published under
+permissive and open licenses, ensuring it remains accessible to everyone.
 
 Here are the four projects receiving grants in this wave:
 
