--- a/data/blog/3rd-wave-of-education-grants.mdx
+++ b/data/blog/3rd-wave-of-education-grants.mdx
@@ -20,8 +20,8 @@ growing Bitcoin ecosystem.
 
 This wave of grants is made possible by the generosity of our donors, whose
 support enables us to fund impactful educational initiatives. We are grateful
-for their commitment to fostering a more informed, inclusive, and decentralized
-future for Bitcoin.
+for their commitment, and hope that these initiatives will empower a wide base
+of current and future bitcoin users.
 
 Educational content produced under these grants is to be published under
 permissive and open licenses, ensuring it remains accessible to everyone.
