--- a/data/blog/3rd-wave-of-education-grants.mdx
+++ b/data/blog/3rd-wave-of-education-grants.mdx
@@ -20,10 +20,10 @@ growing Bitcoin ecosystem.
 
 This wave of grants is made possible by the generosity of our donors, whose
 support enables us to fund impactful educational initiatives. We are grateful
-for their commitment and hope that these initiatives will empower a wide base
-of current and future Bitcoin users.
+for their commitment and hope these initiatives will empower a wide base of
+current and future Bitcoin users.
 
-Educational content produced under these grants is to be published under
+Educational content produced under these grants will be published under
 permissive and open licenses, ensuring it remains accessible to everyone.
 
 Here are the four projects receiving grants in this wave:
