Link to education announcement

--- a/data/blog/3rd-wave-of-education-grants.mdx
+++ b/data/blog/3rd-wave-of-education-grants.mdx
@@ -8,10 +8,12 @@ images: ['/static/images/blog/61-third-wave-education-grants.jpg']
 summary: "OpenSats is funding four more projects in our education initiative."
 ---
 
-We are thrilled to announce our third wave of education grants, dedicated to
+We are thrilled to announce our third wave of [education grants][edu], dedicated to
 advancing Bitcoin literacy and community development across the globe. These
 grants represent our ongoing commitment to supporting projects that make Bitcoin
 education more accessible, practical, and inspiring.
+
+[edu]: /blog/announcing-the-opensats-education-initiative
 
 Whether it's building foundational knowledge, driving merchant adoption, or
 creating engaging content, each project in this wave aims to empower individuals
