--- a/data/blog/3rd-wave-of-education-grants.mdx
+++ b/data/blog/3rd-wave-of-education-grants.mdx
@@ -14,16 +14,17 @@ grants represent our ongoing commitment to supporting projects that make Bitcoin
 education more accessible, practical, and inspiring.
 
 [edu]: /blog/announcing-the-opensats-education-initiative
+[edu-wave]: /tags/education
 
 Whether it's building foundational knowledge, driving merchant adoption, or
 creating engaging content, each project in this wave aims to empower individuals
 and communities with the tools and understanding needed to participate in the
 growing Bitcoin ecosystem.
 
-This wave of grants is made possible by the generosity of our donors, whose
-support enables us to fund impactful educational initiatives. We are grateful
-for their commitment and hope these initiatives will empower a wide base of
-current and future Bitcoin users.
+This [wave education of grants][edu-wave] is made possible by the generosity of
+our donors, whose support enables us to fund impactful educational initiatives.
+We are grateful for their commitment and hope these initiatives will empower a
+wide base of current and future Bitcoin users.
 
 Educational content produced under these grants will be published under
 permissive and open licenses, ensuring it remains accessible to everyone.
