--- a/data/blog/3rd-wave-of-education-grants.mdx
+++ b/data/blog/3rd-wave-of-education-grants.mdx
@@ -8,13 +8,10 @@ images: ['/static/images/blog/61-third-wave-education-grants.jpg']
 summary: "OpenSats is funding four more projects in our education initiative."
 ---
 
-We are thrilled to announce our third wave of [education grants][edu], dedicated to
-advancing Bitcoin literacy and community development across the globe. These
+We are thrilled to announce our third wave of [education grants][edu], dedicated
+to advancing Bitcoin literacy and community development across the globe. These
 grants represent our ongoing commitment to supporting projects that make Bitcoin
 education more accessible, practical, and inspiring.
-
-[edu]: /blog/announcing-the-opensats-education-initiative
-[edu-wave]: /tags/education
 
 Whether it's building foundational knowledge, driving merchant adoption, or
 creating engaging content, each project in this wave aims to empower individuals
@@ -39,6 +36,9 @@ Here are the four projects receiving grants in this wave:
 Each of these projects brings unique value to the global Bitcoin community. We
 are proud to support their efforts and look forward to seeing the impact they
 will have in their respective regions and beyond.
+
+[edu]: /blog/announcing-the-opensats-education-initiative
+[edu-wave]: /tags/education
 
 <center>
     <DonateToGeneralFundButton/>
