--- a/data/blog/3rd-wave-of-education-grants.mdx
+++ b/data/blog/3rd-wave-of-education-grants.mdx
@@ -3,7 +3,7 @@ title: "Third Wave of Education Grants"
 date: '2024-11-18'
 tags: ['OpenSats', 'grants', 'bitcoin', 'education', 'wave']
 draft: false
-authors: ['arvin', 'julian', 'bayer', 'dread']
+authors: ['dread', 'arvin', 'julian', 'bayer']
 images: ['/static/images/blog/61-third-wave-education-grants.jpg']
 summary: "OpenSats is funding four more projects in our education initiative."
 ---
