--- a/data/blog/3rd-wave-of-education-grants.mdx
+++ b/data/blog/3rd-wave-of-education-grants.mdx
@@ -126,7 +126,7 @@ License: CC BY-SA 4.0
 
 We invite open-source educators, developers, and advocates to apply for grants under the
 OpenSats Education Initiative. Together, we can create a more informed and
-empowered society. For more information and to apply, please visit
+empowered public. For more information and to apply, please visit
 [opensats.org/apply](/apply).
 
 Thank you for your continued support. We look forward to seeing the incredible
