--- a/data/blog/doubling-down-on-nostr.mdx
+++ b/data/blog/doubling-down-on-nostr.mdx
@@ -8,3 +8,79 @@ images: ['/static/images/blog/TODO.jpg']
 summary: "Now is not the time to dilly-dally. Now is the time to double down."
 ---
 
+While we have made [almost 30 announcements](/tags/nostr)
+related to The Nostr Fund since the [first wave of
+grants](/blog/nostr-grants-july-2023) in July 2023, we
+haven't announced all the grants that we have given yet. This blog post aims to
+rectify this situation.
+
+It is obvious to us that nostr is very much a necessity in today's day and age.
+As censorship and deplatforming are on the rise across the world, the free flow
+of information---a necessity for a prosperous society---is at risk. Further, it
+should be obvious that yet another platform will not fix this problem, no matter
+how seemingly benevolent the king of said platform claims to be. What is
+required is a neutral protocol; a protocol that is truly open in terms of usage
+and development alike; a protocol that doesn't discriminate, just like Bitcoin
+doesn't discriminate.
+
+While nostr and Bitcoin are a perfect match---the former might serve as a
+potential coordination layer for collaborative transactions for the latter,
+provide the basis for a seamless social payment experience in wallets, or act as
+a permissionless app store to install Bitcoin software on desktop and mobile
+operating systems---nostr is its own ecosystem entirely. It is complementary to
+Bitcoin, not reliant upon it. In addition to zaps and other stuff that
+bitcoiners are enthusiastic about, nostr is an identity-native communication
+layer that has the power to transform the Web as we know it. For all these
+reasons, but also because nostr is just fucking awesome, we're doubling down on
+it.
+
+We have recently given additional grants to various projects, extended existing
+nostr grants, and "upgraded" some of our grantees from "regular" grants to
+long-term support grants.
+
+We gave additional grants to:
+
+- [Damus](/blog/nostr-grants-july-2023#damus)
+- [Gossip](/blog/nostr-grants-july-2023#gossip)
+- [nostr.build](/blog/nostr-grants-july-2023#nostrbuild)
+- [nostr-sdk-ios](/blog/nostr-grants-july-2023#nostr-sdk-ios)
+- [ngit](/blog/nostr-grants-july-2023#code-collaboration-over-nostr)
+  & [gitworkshop](https://gitworkshop.dev/repo/gitworkshop)
+- [nostr-relay](/blog/nostr-grants-july-2023#nostr-relay-nestjs)
+  ([-nestjs](https://github.com/CodyTseng/nostr-relay-nestjs),
+  [-tray](https://github.com/CodyTseng/nostr-relay-tray))
+- [Nostrocket](/blog/nostr-grants-october-2023#nostrocket)
+- [DVMDash](/blog/nostr-grants-july-2024#dvmdash)
+
+And as announced previously and individually, the following grantees receive
+long-term support from us for their outstanding and ongoing contributions to the
+nostr ecosystem: [Pablo](/blog/pablofz7-receives-lts-grant),
+[hzrd149](/blog/hzrd149-receives-lts-grant),
+[Hodlbod](/blog/hodlbod-receives-lts-grant),
+[Yuki](/blog/yuki-receives-lts-grant),
+[fiatjaf](/blog/fiatjaf-receives-lts-grant),
+[jb55](/blog/jb55-receives-lts-grant),
+[Kieran](/blog/kieran-receives-lts-grant),
+[Daniele](/blog/daniele-receives-lts-grant), [Alex
+Gleason](/blog/alex-gleason-receives-lts-grant), [Mike
+Dilger](/blog/mike-dilger-receives-lts-grant), [Vitor
+Pamplona](/blog/vitor-pamplona-receives-lts-grant), and
+[Greenart7c3](/blog/greenart7c3-receives-lts-grant).
+
+It goes without saying, but this is just the beginning. The Nostr Fund is less
+than two years old, and we hope that we can help [provide sustainable funding
+for freedom tech](/mission) for many years to come. And in
+the long run, we hope that we can find a way for projects to be self-sustaining
+without capturing themselves or their users.
+
+All of the above is only possible because of you, our donors. If you want to
+help us provide funding to the nostr ecosystem, please consider making a
+donation to The Nostr Fund:
+
+<center>
+    <DonateToNostrFundButton/>
+</center>
+
+If you are an open-source developer working on nostr (and other stuff), please
+don't hesitate to apply for a grant: [https://opensats.org/apply/grant
+](/apply/grant)
