Edit Em Dash (—)

--- a/data/blog/doubling-down-on-nostr.mdx
+++ b/data/blog/doubling-down-on-nostr.mdx
@@ -16,18 +16,18 @@ rectify this situation.
 
 It is obvious to us that nostr is very much a necessity in today's day and age.
 As censorship and deplatforming are on the rise across the world, the free flow
-of information---a necessity for a prosperous society---is at risk. Further, it
+of information—a necessity for a prosperous society—is at risk. Further, it
 should be obvious that yet another platform will not fix this problem, no matter
 how seemingly benevolent the king of said platform claims to be. What is
 required is a neutral protocol; a protocol that is truly open in terms of usage
 and development alike; a protocol that doesn't discriminate, just like Bitcoin
 doesn't discriminate.
 
-While nostr and Bitcoin are a perfect match---the former might serve as a
+While nostr and Bitcoin are a perfect match—the former might serve as a
 potential coordination layer for collaborative transactions for the latter,
 provide the basis for a seamless social payment experience in wallets, or act as
 a permissionless app store to install Bitcoin software on desktop and mobile
-operating systems---nostr is its own ecosystem entirely. It is complementary to
+operating systems—nostr is its own ecosystem entirely. It is complementary to
 Bitcoin, not reliant upon it. In addition to zaps and other stuff that
 bitcoiners are enthusiastic about, nostr is an identity-native communication
 layer that has the power to transform the Web as we know it. For all these
