--- a/data/blog/doubling-down-on-nostr.mdx
+++ b/data/blog/doubling-down-on-nostr.mdx
@@ -3,7 +3,7 @@ title: "Doubling Down on Nostr "
 date: '2024-11-20'
 tags: ['OpenSats', 'grants', 'nostr', 'wave']
 draft: false
-authors: ['dergigi']
+authors: ['dergigi', 'odell']
 images: ['/static/images/blog/63-doubling-down-on-nostr.jpg']
 summary: "Now is not the time to dilly-dally. Now is the time to double down."
 ---
@@ -14,21 +14,21 @@ grants](/blog/nostr-grants-july-2023) in July 2023, we
 haven't announced all the grants that we have given yet. This blog post aims to
 rectify this situation.
 
-It is obvious to us that nostr is very much a necessity in today's day and age.
+It is obvious that nostr is very much a necessity in today's day and age.
 As censorship and deplatforming are on the rise across the world, the free flow
 of information—a necessity for a prosperous society—is at risk. Further, it
 should be obvious that yet another platform will not fix this problem, no matter
 how seemingly benevolent the king of said platform claims to be. What is
 required is a neutral protocol; a protocol that is truly open in terms of usage
-and development alike; a protocol that doesn't discriminate, just like Bitcoin
-doesn't discriminate.
+and development alike; a protocol that does not discriminate, just like bitcoin
+does not discriminate.
 
-While nostr and Bitcoin are a perfect match—the former might serve as a
+While nostr and bitcoin are a perfect match—the former might serve as a
 potential coordination layer for collaborative transactions for the latter,
 provide the basis for a seamless social payment experience in wallets, or act as
-a permissionless app store to install Bitcoin software on desktop and mobile
+a permissionless app store to install bitcoin software on desktop and mobile
 operating systems—nostr is its own ecosystem entirely. It is complementary to
-Bitcoin, not reliant upon it. In addition to zaps and other stuff that
+bitcoin, not reliant upon it. In addition to zaps and other stuff that
 bitcoiners are enthusiastic about, nostr is an identity-native communication
 layer that has the power to transform the Web as we know it. For all these
 reasons, but also because nostr is just fucking awesome, we're doubling down on
