--- a/data/blog/doubling-down-on-nostr.mdx
+++ b/data/blog/doubling-down-on-nostr.mdx
@@ -9,7 +9,7 @@ summary: "Now is not the time to dilly-dally. Now is the time to double down."
 ---
 
 While we have made [almost 30 announcements](/tags/nostr)
-related to The Nostr Fund since the [first wave of
+related to *The Nostr Fund* since the [first wave of
 grants](/blog/nostr-grants-july-2023) in July 2023, we
 haven't announced all the grants that we have given yet. This blog post aims to
 rectify this situation.
@@ -67,7 +67,7 @@ Dilger](/blog/mike-dilger-receives-lts-grant), [Vitor
 Pamplona](/blog/vitor-pamplona-receives-lts-grant), and
 [Greenart7c3](/blog/greenart7c3-receives-lts-grant).
 
-It goes without saying, but this is just the beginning. The Nostr Fund is less
+It goes without saying, but this is just the beginning. *The Nostr Fund* is less
 than two years old, and we hope that we can help [provide sustainable funding
 for freedom tech](/mission) for many years to come. And in
 the long run, we hope that we can find a way for projects to be self-sustaining
@@ -75,7 +75,7 @@ without capturing themselves or their users.
 
 All of the above is only possible because of you, our donors. If you want to
 help us provide funding to the nostr ecosystem, please consider making a
-donation to The Nostr Fund:
+donation to [The Nostr Fund](/funds/nostr):
 
 <center>
     <DonateToNostrFundButton/>
