--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -25,12 +25,15 @@ as in the internal and external processes of our organization.
 
 [ebl]: /docs/bylaws.pdf
 
-## Grants & Reports
+## Grants & Grantees
 
 - [List of Bitcoin Grants](/tags/bitcoin)
 - [List of Nostr Grants](/tags/nostr)
 - [List of Education Grants](/tags/education)
 - [List of LTS Grantees](/tags/lts)
+
+## Selection & Reports
+
 - [Grant Selection Process](/selection)
 - [Grant Agreement](/docs/agreement.pdf)
 - [EOY Report: 2023](/blog/2023-year-in-review)
