--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -22,6 +22,7 @@ as in the internal and external processes of our organization.
 - [Our Mission](/mission)
 - [Executed By-Laws][ebl]
 - [Board of Directors](/about#board-of-directors)
+- [OpenSats Structure](/structure)
 
 [ebl]: /docs/bylaws.pdf
 
