Add initiatives to /transparency

--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -26,6 +26,13 @@ as in the internal and external processes of our organization.
 
 [ebl]: /docs/bylaws.pdf
 
+## OpenSats Initiatives
+
+- [Long-Term Support (LTS)](/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors)
+- [Education Initiative](/blog/announcing-the-opensats-education-initiative)
+- [The Nostr Fund](/blog/nostr-grants-july-2023)
+- [Nostr Design](/tags/design)
+
 ## Grants & Grantees
 
 - [List of Bitcoin Grants](/tags/bitcoin)
