Add funding decisions graphic to /selection

--- a/data/pages/selection.mdx
+++ b/data/pages/selection.mdx
@@ -47,6 +47,14 @@ ensure the grant achieves the intended outcomes.
 
 ## Our Process for Reviewing Grant Proposals
 
+All grant applications go through the same multi-step review process.  Depending
+on the domain and nature of the grant, various domain experts volunteer to
+assess technical viability and impact. While some project proposals may overlap
+in terms of impact areas, most of the grant applications we receive fall into
+one of five categories:
+
+![](/static/images/transparency/funding-decisions.png)
+
 We are committed to a thorough and rigorous process for reviewing grant
 applications. We aim to ensure that proposals align with
 our mission and priorities, are well-crafted, and have a clear path toward
