Edit image file format from png to jpg
Otherwise image doesnt load

--- a/data/pages/selection.mdx
+++ b/data/pages/selection.mdx
@@ -53,7 +53,7 @@ assess technical viability and impact. While some project proposals may overlap
 in terms of impact areas, most of the grant applications we receive fall into
 one of five categories:
 
-![Funding Decision Structure](/static/images/transparency/funding-decisions.png)
+![Funding Decision Structure](/static/images/transparency/funding-decisions.jpg)
 
 We are committed to a thorough and rigorous process for reviewing grant
 applications. We aim to ensure that proposals align with
