Fix hyperlink error

--- a/data/blog/renewing-our-commitment-to-bitcoin.mdx
+++ b/data/blog/renewing-our-commitment-to-bitcoin.mdx
@@ -58,4 +58,4 @@ Fund](/funds/general):
 </center>
 
 If you are an open-source developer working on Bitcoin, do not hesitate to apply
-for a grant: <https://opensats.org/apply/grant>
+for a grant: [https://opensats.org/apply/grant](https://opensats.org/apply/grant)
