--- a/data/blog/renewing-our-commitment-to-bitcoin.mdx
+++ b/data/blog/renewing-our-commitment-to-bitcoin.mdx
@@ -32,7 +32,7 @@ projects:
 - [BTCPay Server](/blog/bitcoin-grants-july-2023#btcpay-server)
 - [Stratum
   V2](/blog/bitcoin-and-nostr-grants-august-2023#stratum-v2-testing--benchmarking-tool)
-- [RaspiBlitz](/blog/bitcoin-grants-july-2023#raspiblitz)
+- [Raspiblitz](/blog/bitcoin-grants-july-2023#raspiblitz)
 - [LNbits](/blog/bitcoin-and-nostr-grants-august-2023#lnbits)
 - [Vexl](/blog/bitcoin-grants-december-2023#vexl)
 - [Blixt](/blog/bitcoin-grants-july-2023#blixt-wallet)
