--- a/data/blog/jon-atack-receives-lts-grant.mdx
+++ b/data/blog/jon-atack-receives-lts-grant.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Long-Term Support For Jon Atack"
 date: '2024-09-26'
-tags: ['OpenSats', 'grants', 'bitcoin', 'LTS']
+tags: ['OpenSats', 'grants', 'bitcoin', 'LTS', 'core']
 draft: false
 authors: ['arvin', 'dergigi']
 images: ['/static/images/blog/53-jon-atack-lts.jpg']
