--- a/data/blog/renewing-our-commitment-to-bitcoin.mdx
+++ b/data/blog/renewing-our-commitment-to-bitcoin.mdx
@@ -19,7 +19,7 @@ financial independence, but also affecting public markets, creating new
 financial instruments, and [other
 innovations](https://www.accesswire.com/946068/newmarket-launches-battery-finance-a-pioneering-asset-management-and-specialty-finance-platform-built-on-bitcoin-completes-inaugural-credit-investment)
 that bridge traditional finance with this pristine digital asset class. All this
-demonstrates that the Bitcoin experiment is working; as intended, it is slowly
+demonstrates that the Bitcoin experiment is working as intended: it is slowly
 but surely reshaping how money operates.
 
 Beyond our previous announcements, our commitment runs deeper. We've doubled
