Edit to add em dash

--- a/data/blog/renewing-our-commitment-to-bitcoin.mdx
+++ b/data/blog/renewing-our-commitment-to-bitcoin.mdx
@@ -14,7 +14,7 @@ and projects working to grow the Bitcoin ecosystem. This ecosystem is built on
 the innovation, dedication, collaboration, and the tireless efforts of
 open-source contributors.
 
-Bitcoin's influence is ever expanding---not just for individuals reclaiming
+Bitcoin's influence is ever expanding—not just for individuals reclaiming
 financial independence, but also affecting public markets, creating new
 financial instruments, and [other
 innovations](https://www.accesswire.com/946068/newmarket-launches-battery-finance-a-pioneering-asset-management-and-specialty-finance-platform-built-on-bitcoin-completes-inaugural-credit-investment)
