--- a/data/blog/renewing-our-commitment-to-bitcoin.mdx
+++ b/data/blog/renewing-our-commitment-to-bitcoin.mdx
@@ -57,5 +57,5 @@ Fund](/funds/general):
     <DonateToGeneralFundButton/>
 </center>
 
-If you are an open-source developer working on Bitcoin, do not hesitate to apply
-for a grant: [https://opensats.org/apply/grant](https://opensats.org/apply/grant)
+If you are an open-source developer working on Bitcoin, do not hesitate to [apply
+for a grant](https://opensats.org/apply/grant).
