--- a/data/blog/renewing-our-commitment-to-bitcoin.mdx
+++ b/data/blog/renewing-our-commitment-to-bitcoin.mdx
@@ -9,7 +9,7 @@ summary: "Renewing our support for projects advancing Bitcoin's future."
 ---
 
 Over the past two years, we have made [41 announcements](/tags/bitcoin) from our
-General Fund highlighting our commitment to supporting individual contributors
+General Fund highlighting our commitment to support individual contributors
 and projects working to grow the Bitcoin ecosystem. This ecosystem is built on
 the innovation, dedication, collaboration, and the tireless efforts of
 open-source contributors.
