--- a/data/blog/renewing-our-commitment-to-bitcoin.mdx
+++ b/data/blog/renewing-our-commitment-to-bitcoin.mdx
@@ -23,7 +23,7 @@ demonstrates that the Bitcoin experiment is working as intended: it is slowly
 but surely reshaping how money operates.
 
 Beyond our previous announcements, our commitment runs deeper. We've doubled
-down our support for 9 exceptional projects advancing the Bitcoin ecosystem.
+down on our support for 9 exceptional projects advancing the Bitcoin ecosystem.
 These projects remind us of [our purpose](/mission): to ensure that open-source
 builders and innovators in the Bitcoin space have the resources they need to
 push boundaries. It's an honor to provide additional grants to the following
