--- a/data/blog/renewing-our-commitment-to-bitcoin.mdx
+++ b/data/blog/renewing-our-commitment-to-bitcoin.mdx
@@ -44,7 +44,7 @@ In addition to these projects, our commitment and long-term support to [key
 infrastructure engineers](/tags/core) remains unchanged.
 
 As Bitcoin continues to redefine the future of money, the work of these
-individuals and projects are the foundation for its progress. Their dedication
+individuals and projects is the foundation for its progress. Their dedication
 to free and open-source development ensures that Bitcoin remains secure,
 decentralized, and accessible to everyone.
 
