--- a/data/blog/renewing-our-commitment-to-bitcoin.mdx
+++ b/data/blog/renewing-our-commitment-to-bitcoin.mdx
@@ -3,7 +3,7 @@ title: "Renewing Our Commitment to Bitcoin"
 date: '2024-12-05'
 tags: ['OpenSats', 'grants', 'bitcoin', 'wave']
 draft: false
-authors: ['arvin', 'dergigi', 'btcschellingpt']
+authors: ['arvin', 'dergigi', 'btcschellingpt', 'julian']
 images: ['/static/images/blog/64-renewing-our-commitment-to-bitcoin.jpg']
 summary: "Renewing our support for projects advancing Bitcoin's future."
 ---
