Put list item on one line

--- a/data/blog/renewing-our-commitment-to-bitcoin.mdx
+++ b/data/blog/renewing-our-commitment-to-bitcoin.mdx
@@ -29,8 +29,7 @@ push boundaries. It's an honor to provide additional grants to the following
 projects:
 
 - [BTCPay Server](/blog/bitcoin-grants-july-2023#btcpay-server)
-- [Stratum
-  V2](/blog/bitcoin-and-nostr-grants-august-2023#stratum-v2-testing--benchmarking-tool)
+- [Stratum V2](/blog/bitcoin-and-nostr-grants-august-2023#stratum-v2-testing--benchmarking-tool)
 - [Raspiblitz](/blog/bitcoin-grants-july-2023#raspiblitz)
 - [LNbits](/blog/bitcoin-and-nostr-grants-august-2023#lnbits)
 - [Vexl](/blog/bitcoin-grants-december-2023#vexl)
