--- a/data/blog/renewing-our-commitment-to-bitcoin.mdx
+++ b/data/blog/renewing-our-commitment-to-bitcoin.mdx
@@ -9,24 +9,24 @@ summary: "Renewing our support for projects advancing Bitcoin's future."
 ---
 
 Over the past two years, we have made [41 announcements](/tags/bitcoin) from our
-General Fund highlighting our commitment to support individual contributors
-and projects working to grow the Bitcoin ecosystem. This ecosystem is built on
-the innovation, dedication, collaboration, and the tireless efforts of
-open-source contributors.
+General Fund highlighting our commitment to support individual contributors and
+projects working to not only grow the Bitcoin ecosystem but also make it more
+resilient and robust in the process. Without the tireless effort of these
+open-source contributors, as well as their innovation, dedication,
+collaboration, and commitment to financial freedom, bitcoin wouldn't be where it
+is today.
 
-Bitcoin's influence is ever expanding—not just for individuals reclaiming
-financial independence, but also affecting public markets, creating new
-financial instruments, and other innovations
-that bridge traditional finance with this pristine digital asset class. All this
-demonstrates that the Bitcoin experiment is working as intended: it is slowly
-but surely reshaping how money operates.
+Bitcoin's influence is ever expanding—not just for individuals reclaiming their
+financial independence and redefining what it means to send value without
+middlemen, but also affecting public markets, creating new financial
+instruments, and other innovations that bridge traditional finance with what has
+become the world's most pristine asset. All this demonstrates that Bitcoin is
+working as intended: it is slowly but surely reshaping how money operates. Every
+10 minutes.
 
-Beyond our previous announcements, our commitment runs deeper. We've doubled
-down on our support for 9 exceptional projects advancing the Bitcoin ecosystem.
-These projects remind us of [our purpose](/mission): to ensure that open-source
-builders and innovators in the Bitcoin space have the resources they need to
-push boundaries. It's an honor to provide additional grants to the following
-projects:
+In addition to the grants we have announced in the past, we are renewing our
+commitment to 9 exceptional projects advancing the Bitcoin ecosystem on various
+fronts:
 
 - [BTCPay Server](/blog/bitcoin-grants-july-2023#btcpay-server)
 - [Stratum V2](/blog/bitcoin-and-nostr-grants-august-2023#stratum-v2-testing--benchmarking-tool)
@@ -38,8 +38,10 @@ projects:
 - [Bitaxe](/blog/bitcoin-grants-feb-2024#the-bitaxe)
 - [Labelbase](/blog/bitcoin-grants-july-2023#labelbase)
 
-In addition to these projects, our commitment and long-term support to [key
-infrastructure engineers](/tags/core) remains unchanged.
+These projects remind us of [our purpose](/mission): to ensure that open-source
+builders and innovators in the Bitcoin space have the resources they need to
+push boundaries. In addition to these projects, our commitment and long-term
+support to [key infrastructure engineers](/tags/core) remains unchanged.
 
 As Bitcoin continues to redefine the future of money, the work of these
 individuals and projects is the foundation for its progress. Their dedication
