--- a/data/blog/renewing-our-commitment-to-bitcoin.mdx
+++ b/data/blog/renewing-our-commitment-to-bitcoin.mdx
@@ -25,8 +25,7 @@ working as intended: it is slowly but surely reshaping how money operates. Every
 10 minutes.
 
 In addition to the grants we have announced in the past, we are renewing our
-commitment to 9 exceptional projects advancing the Bitcoin ecosystem on various
-fronts:
+commitment to 9 exceptional projects advancing the ecosystem on various fronts:
 
 - [BTCPay Server](/blog/bitcoin-grants-july-2023#btcpay-server)
 - [Stratum V2](/blog/bitcoin-and-nostr-grants-august-2023#stratum-v2-testing--benchmarking-tool)
