--- a/data/blog/renewing-our-commitment-to-bitcoin.mdx
+++ b/data/blog/renewing-our-commitment-to-bitcoin.mdx
@@ -45,7 +45,7 @@ support to [key infrastructure engineers](/tags/core) remains unchanged.
 As Bitcoin continues to redefine the future of money, the work of these
 individuals and projects is the foundation for its progress. Their dedication
 to free and open-source development ensures that Bitcoin remains secure,
-decentralized, and accessible to everyone.
+decentralized, and accessible to anyone.
 
 We're grateful to our donors, whose generosity makes this support possible. Your
 contributions directly empower the builders shaping Bitcoin's path forward. If
