--- a/data/blog/renewing-our-commitment-to-bitcoin.mdx
+++ b/data/blog/renewing-our-commitment-to-bitcoin.mdx
@@ -43,13 +43,14 @@ push boundaries. In addition to these projects, our commitment and long-term
 support to [key infrastructure engineers](/tags/core) remains unchanged.
 
 As Bitcoin continues to redefine the future of money, the work of these
-individuals and projects is the foundation for its progress. Their dedication
-to free and open-source development ensures that Bitcoin remains secure,
-decentralized, and accessible to anyone.
+individuals and projects is crucial for making Bitcoin the best and strongest
+system it can be. Their dedication to free and open-source development ensures
+that the freedom tools we use remain secure, decentralized, and accessible to
+anyone.
 
 We're grateful to our donors, whose generosity makes this support possible. Your
 contributions directly empower the builders shaping Bitcoin's path forward. If
-you share our vision, then please consider making a donation to the [General
+you share our vision, then please consider donating to the [General
 Fund](/funds/general):
 
 <center>
