--- a/data/blog/9th-wave-of-nostr-grants.mdx
+++ b/data/blog/9th-wave-of-nostr-grants.mdx
@@ -18,7 +18,7 @@ Each project showcases the creativity and dedication driving open-source
 development in nostr and reflects a shared vision for a more decentralized
 future.
 
-The four projects in this funding wave are:
+The five projects in this funding wave are:
 
 - [AlgoRelay](#algorelay)
 - [Pokey](#pokey)
