--- a/data/blog/9th-wave-of-nostr-grants.mdx
+++ b/data/blog/9th-wave-of-nostr-grants.mdx
@@ -3,7 +3,7 @@ title: "Ninth Wave of Nostr Grants"
 date: '2024-12-16'
 tags: ['OpenSats', 'grants', 'nostr', 'wave']
 draft: false
-authors: ['dergigi', 'arvin', 'bayer', 'btcschellingpt']
+authors: ['arvin', 'bayer', 'btcschellingpt']
 images: ['/static/images/blog/65-ninth-wave-of-nostr-grants.jpg']
 summary: "OpenSats is funding five more open-source projects in the nostr ecosystem."
 ---
