Remove OpenBalance link
OpenBalance is proprietary closed-source software, unfortunately. So let's not link to it directly.

--- a/data/blog/9th-wave-of-nostr-grants.mdx
+++ b/data/blog/9th-wave-of-nostr-grants.mdx
@@ -9,10 +9,9 @@ summary: "OpenSats is funding five more open-source projects in the nostr ecosys
 ---
 
 We're thrilled to announce our latest wave of funding, which will support five
-innovative projects that advance and strengthen the nostr ecosystem.
-
-These projects aim to improve financial tools, localization, user experience,
-content personalization, and accessibility within the nostr network.
+innovative projects that advance and strengthen the nostr ecosystem.  These
+projects aim to improve financial tools, localization, user experience, content
+personalization, and accessibility within the nostr network.
 
 Each project showcases the creativity and dedication driving open-source
 development in nostr and reflects a shared vision for a more decentralized
@@ -85,7 +84,7 @@ can scale.
 
 The current phase focuses on building a stable Python prototype, including CLI
 utilities and cross-platform binaries, while integrating Safebox with Lightning
-payment services like [OpenBalance.app](https://openbalance.app/). Plans involve
+payment services like OpenBalance. Plans involve
 developing multiple implementations (e.g., in Go and Rust) and refining
 usability for broader adoption.
 
