--- a/data/blog/9th-wave-of-nostr-grants.mdx
+++ b/data/blog/9th-wave-of-nostr-grants.mdx
@@ -99,8 +99,7 @@ guides for nostr tools like
 [NIP-05](https://github.com/nostr-protocol/nips/blob/master/05.md), Lightning,
 and developer documentation for creating and managing nostr relays and clients.
 By breaking down language barriers, the project aims to bring decentralized
-technology to millions of Persian/Farsi speakers in Iran, Afghanistan,
-Tajikistan, and beyond.
+technology to millions of Persian/Farsi speakers worldwide.
 
 The project plans to regularly update translations, complete a user guide, and
 initiate a developer guide. Future goals include expanding contributions,
