--- a/data/pages/donate.mdx
+++ b/data/pages/donate.mdx
@@ -41,14 +41,18 @@ There are several benefits to donating through a DAF:
 - It’s easy to donate [Bitcoin][daf-btc] (or other appreciated assets) to the fund while not incurring capital gains tax.
 
 By donating Bitcoin through your DAF, you will receive the tax-deductible
-benefit for the value of the Bitcoin, but OpenSats will receive USD, not
-Bitcoin. For more details, please contact your DAF portfolio manager.
+benefit for the value of the Bitcoin. Our preferred DAF partner is [Unchained
+donor-advised funds][unchained], since the bitcoin DAFs are on-chain, meaning donations to
+the DAF and grants to OpenSats can remain in bitcoin.
 
-The three largest DAFs are  [Fidelity
+With traditional DAFs, OpenSats will receive USD, not Bitcoin. For more details,
+please contact your DAF portfolio manager.
+
+The three largest traditional DAFs are  [Fidelity
 Charitable](https://www.fidelitycharitable.org/),  [Schwab
 Charitable](https://www.schwabcharitable.org/)  and  [BNY Mellon Charitable Gift
 Fund](https://bnymelloncharitablegiftfund.org/bnym/). All three can accept
-Bitcoin donations.
+Bitcoin donations, but will sell the bitcoin donations as soon as they are received.
 
 If you have an established account with one of the above-mentioned funds, then
 you can  [donate directly to OpenSats through your DAF][daf-direct].
@@ -80,3 +84,4 @@ recurring basis, please reach out to donate@opensats.org.
 [daf-btc]: https://www.fidelitycharitable.org/giving-account/what-you-can-donate/donating-bitcoin-to-charity.html
 [daf-direct]: https://www.dafdirect.org/DAFDirect/daflink?_dafdirect_settings=ODUyNzIyMjQ5XzIxMTFfMjU4NjM2NDMtZGUxYS00Yjc1LTk4NGEtM2U0MTg5ZjZjZmEz&designatedText=&amountValue=
 [brink]: https://brink.dev/blog/2021/03/26/donate-bitcoin/#donate-bitcoin-directly-to-brink
+[unchained]: https://unchained.com/donor-advised-funds
