Add link to mission

--- a/data/pages/selection.mdx
+++ b/data/pages/selection.mdx
@@ -122,7 +122,7 @@ outcomes and that the grantee is using the funds responsibly.
 ## Conclusion
 
 At OpenSats, we are committed to a thorough and rigorous review process for
-grant proposals. Our process ensures that proposals align with our mission and
+grant proposals. Our process ensures that proposals align with [our mission](/mission) and
 priorities, are well-crafted, and have a clear path toward achieving intended
 outcomes. We do our best to work with grantees to ensure that proposals are
 feasible, impactful, and scalable, and we monitor the grant progress closely to
